progressbar styling fix on firefox mobile

--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@ body {
 
                 display: grid;
                 grid-template-columns: 5fr 10fr;
-                grid-template-rows: 1.5rem 4.1rem 1.8rem 2.7rem;
+                grid-template-rows: 1.5rem 4.5rem 1.8rem 2.7rem;
 
                 &>p {
                     overflow-y: hidden;
@@ -187,19 +187,18 @@ body {
                     grid-column: 1;
                     grid-row: 1 / 3;
 
-                    max-width: 100%;
-                    max-height: 100%;
+                    height: max-content;
+                    width: 100%;
 
                     display: flex;
                     flex-flow: column nowrap;
+                    gap: 0.3rem;
 
                     &>.episode-image {
                         justify-self: center;
 
-                        max-height: 90%;
                         width: 100%;
                         object-fit: contain;
-                        max-height: 90%;
 
                         border-radius: 0.5rem;
                     }
@@ -207,9 +206,6 @@ body {
                     &>.progress-bar {
                         width: 100%;
                         height: 0.5vh;
-
-                        margin-top: 5%;
-                        margin-bottom: 5%;
 
                         border-radius: 0.5rem;
 
